--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
+    "quagga": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^3.0.0-beta-1",
-    "react-router-dom": "^6.23.0"
-},
+    "react-router-dom": "^6.23.0",
+    "webrtc-adapter": "^9.0.1"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
