--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
+    "@vite-pwa/assets-generator": "^0.2.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -20,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.23.0",
+    "vite-plugin-pwa": "^0.20.0",
     "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
